# RL-projects

./: .gitignore  README.md  agent_mm_parallel.py  agent_mm_priority.py  agent_mm_pvs.py  agent_mm_pvs_parallel.py  agent_mtd.py  agent_sp.py  game.py  patchwork.py  patchwork_game.py  patchwork_viz.py  render.py  simplified_abdada.c  strategy.md
cpp/: .gitignore  CMakeLists.txt  agent.h  agent_heu.cc  agent_heu.h  agent_mm.cc  agent_mm.h  agent_pvs.cc  agent_pvs.h  agent_random.h  cpp.code-workspace  evaluate.cc  evaluate.h  main.cpp  patch.cc  patch.h  patchwork.cc  patchwork.code-workspace  patchwork.h  patchwork_player.cc  patchwork_player.h  patchwork_state.cc  patchwork_state.h
open_spiel_extensions/bots/patchwork/: CMakeLists.txt  heu_patchwork_bot.cc  heu_patchwork_bot.h  mm_patchwork_bot.cc  mm_patchwork_bot.h
open_spiel_extensions/games/: patchwork.cc  patchwork.h
open_spiel_extensions/games/patchwork/: patch.cc  patch.h  patchwork_player.cc  patchwork_player.h  patchwork_state.cc  patchwork_state.h
python/: agent_heu.py  agent_human.py  agent_mm.py  agent_mm_abdada.py  agent_random.py  keyboard_listener.py  main.py
results/: profiling
